Resolve white space on the right of the screen by adding g-0 beside row in the footer. This removes the --bs-gutter-x: 1.5rem; bootstrap was adding, frustratingly so

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Convergence', sans-serif;
     margin:0;
 	padding:0;
-    width: 100%;
+    max-width: 100%;
     /* overflow: hidden; */
 }
 
@@ -251,7 +251,7 @@ body {
 /* Footer */
 .container{
 	max-width:fit-content;
-	margin:auto;
+	margin:0;
 }
 .row{
 	display: flex;
@@ -260,11 +260,13 @@ body {
 ul{
 	list-style: none;
 }
+
 .footer{
 	background-color: #24262b;
     line-height: 1;
 	font-family: 'Poppins', sans-serif;
-    padding: 5px 0;
+    padding: 0;
+    --bs-gutter-x: 0rem;
 }
 .footer-col{
    width: 33%;
@@ -310,7 +312,7 @@ ul{
 	height: 40px;
 	width: 40px;
 	background-color: rgba(255,255,255,0.2);
-	margin:0 5px 5px 0;
+	margin:0;
 	text-align: center;
 	line-height: 40px;
 	border-radius: 50%;
